--- a/sources.yaml
+++ b/sources.yaml
@@ -29,6 +29,8 @@ sources:
       - make:
           version: 4.3
           ext: gz
+      - m4:
+          version: 1.4.19
       - patch: 2.7.6
       - sed: 4.8
       - tar: 1.34
@@ -60,6 +62,9 @@ sources:
       - file:
           version: 5.41
           url: http://ftp.astron.com/pub/file/file-{version}.tar.gz
+      - rsync:
+          version: 3.2.4
+          url: https://download.samba.org/pub/rsync/src/rsync-{version}.tar.gz
       - util-linux:
           version: 2.37.4
           url: https://mirrors.edge.kernel.org/pub/linux/utils/util-linux/v2.37/util-linux-{version}.tar.gz
