--- a/steps.yaml
+++ b/steps.yaml
@@ -490,19 +490,15 @@ fchroot:
   defaults:
     template: fchroot.tmpl
   steps:
+    - rsync: |
+        # linux headers use rsync to install. We will compile a minimal native
+        # rsync so it is happy.
+        ./configure --prefix=/usr --disable-openssl --disable-xxhash --disable-zstd --disable-lz4
+        make
+        make install
     - linux: |
         make mrproper
-        # This uses rsync!:
-        # make ARCH={{arch}} headers_install
-        # This should be converted to not use rsync:
-        # quiet_cmd_headers_install = INSTALL $(INSTALL_HDR_PATH)/include
-        # cmd_headers_install = \
-        # mkdir -p $(INSTALL_HDR_PATH); \
-        # rsync -mrl --include='*/' --include='*\.h' --exclude='*' \
-        # usr/include $(INSTALL_HDR_PATH)
-        cd usr/include
-        install -d /usr/include
-        cp -a * /usr/
+        make headers_install
     - musl: |
         ./configure --prefix=/
         make
