Add missing patchelf to funtoo CI.

--- a/ci/mottainai-funtoo-arm-64bit-fchroot.yaml
+++ b/ci/mottainai-funtoo-arm-64bit-fchroot.yaml
@@ -4,7 +4,7 @@ namespace: ffs-sources
 script:
 - sleep 5
 - >-
-  ego sync && emerge --jobs pyyaml jinja
+  ego sync && emerge --jobs pyyaml jinja patchelf
 - export CLFS=${HOME}
 - bin/sourcer fetch
 - bin/builder arm-64bit cross_tools
