Committing work in progress. Current powerpc build fails with:
echo timestamp > stmp-int-hdrs
//build/gcc-11.3.0/gcc-build/./gcc/xgcc -B//build/gcc-11.3.0/gcc-build/./gcc/ -xc -nostdinc /dev/null -S -o /dev/null -fself-test=../../gcc/testsuite/selftests
//build/gcc-11.3.0/gcc-build/./gcc/xgcc -B//build/gcc-11.3.0/gcc-build/./gcc/ -xc++ -nostdinc /dev/null -S -o /dev/null -fself-test=../../gcc/testsuite/selftests
cc1: error: '-msecure-plt' not supported by your assembler
cc1plus: error: '-msecure-plt' not supported by your assembler
cc1: internal compiler error: in build_function_type, at tree.c:8422
cc1plus: internal compiler error: in build_function_type, at tree.c:8422
mmap: Bad file descriptor
close: Bad file descriptor
Please submit a full bug report,
with preprocessed source if appropriate.
See <https://gcc.gnu.org/bugs/> for instructions.
make[3]: *** [../../gcc/c/Make-lang.in:127: s-selftest-c] Error 1

--- a/steps/cross_tools.yaml
+++ b/steps/cross_tools.yaml
@@ -64,7 +64,7 @@ cross_tools:
           {%- if arch == "powerpc" %}
           --with-abi=elfv2 \
           --enable-secureplt \
-          --enable-decimal-float=no \
+          --disable-decimal-float \
           {%- endif %}
           --prefix=${CLFS}/cross-tools \
           --build=${CLFS_HOST} \
