This is more work-in-progress stuff, but ppc64 is not fixed yet. Just putting this in a branch for now.

--- a/sources.yaml
+++ b/sources.yaml
@@ -13,6 +13,8 @@ sources:
       - gcc:
           url: https://ftp.gnu.org/gnu/{name}/{name}-{version}/{name}-{version}.tar.{ext}
           version: 11.3.0
+          patches:
+            - gcc-ppc64-le-disable-multilib-support.patch
       - ncurses:
           version: 6.3
           ext: gz
