--- a/ci/mottainai-ubuntu-21.10-x86-64bit.yaml
+++ b/ci/mottainai-ubuntu-21.10-x86-64bit.yaml
@@ -4,8 +4,9 @@ namespace: ffs-sources
 script:
 - >-
   apt-get update && apt-get -y install python3-yaml python3-jinja2 wget xz-utils make gcc g++ rsync texinfo file m4 bzip2 patch
-- export CLFS=${HOME}
-- bin/sourcer fetch && bin/builder x86-64bit cross_tools && bin/builder x86-64bit tools
+- bin/sourcer fetch
+- bin/builder musl x86-64bit cross_tools
+- bin/builder musl x86-64bit tools
 environment:
 - SHELL=/bin/bash
 - LUET_NOLOCK=true
